--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="libs/jquery.hammer.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-md5/angular-md5.min.js"></script>
     <script src="app.js"></script>
   </body>
 </head>
