--- a/Buscador.html
+++ b/Buscador.html
@@ -2,6 +2,7 @@
 <div class="Contenedor">
   <section class="Buscador">
     <section class="Buscador-ContCampo">
+      <p class="Buscador-MensajeHttp">Si tiene problemas con la busqueda de los heroes, permita cargas las secuencias de comandos inseguras, esto se debe a que la petición debería estar bajo https</p>
       <label for="Buscador-Campo" class="Buscador-Etiqueta is-Active">
          
         Busca un heroe de marvel<span ng-click="ShowSugerencia()">?</span>
